# mcp-proving-ground-client

./: .env  .env.example  .gitignore  README.md  app.py  client.py  config.yaml  main.py  pyproject.toml  requirements.txt  sample_client.py
lib/: mcp_client.py
models/: mcp_client.py
server/: weather.py
