[project]
name = "mcp-proving-ground-client"
version = "0.1.0"
description = "A Python-based client for testing custom MCP servers, designed to avoid message limits encountered with other clients"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.3.0",
    "pyyaml>=6.0.2",
    "openai",
    "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["lib", "server"]
